backend: починить импорт Duration и добавить devprep.flags.enabled